--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,9 +14,7 @@ jobs:
     name: asdf plugin test
     strategy:
       matrix:
-        os:
-          - ubuntu-latest
-          - macos-latest
+        os: [ubuntu-latest, macos-latest]
     runs-on: ${{ matrix.os }}
     steps:
       - name: asdf_plugin_test
